# anybar-rs

./: Cargo.toml  README.md  index.html  search-index.js
anybar/: enum.Color.html  index.html  sidebar-items.js  struct.Anybar.html
examples/: trafficlight.rs
implementors/core/default/: trait.Default.js
src/: lib.rs
src/anybar/src/: lib.rs.html
tests/: colorset.rs  create.rs  quit.rs
